fix overlaps

--- a/styles.css
+++ b/styles.css
@@ -328,7 +328,7 @@ nav .right a span {
   /* SECTION 3: Skills */
 
   .skills-section{
-    margin-bottom: 600px;
+    margin-bottom: 900px;
   }
   
   .skills-container {
